# df-translation-client

./: .coveragerc  .flake8  .gitignore  .travis.yml  LICENSE  README.md  bisect_tool.py  bitbucket-pipelines.yml  cleanup.py  config.py  custom_widgets.py  debug_dfrus.pyw  df-translate.py  df-translate.pyw  df-translate.spec  dialog_dont_fix_spaces.py  frame_download.py  frame_patch.py  frame_translate_external_files.py  main_window.py  messages.pot  po_languages.py  pyproject.toml  requirements.test.txt  requirements.txt  setup.py  tab_download.py  tests.py  tkinter_helpers.py
.github/: dependabot.yml
.github/workflows/: python-app.yml  test.yml
df_translation_client/: __main__.py  app.py  config.py  debug_dfrus.pyw  main_window.py  po_languages.py  tkinter_helpers.py
df_translation_client/downloaders/: abstract_downloader.py  common.py  github.py  transifex_api_2.py  transifex_api_3.py
df_translation_client/frames/: dialog_do_not_fix_spaces.py  frame_create_csv.py  frame_debug.py  frame_download.py  frame_patch.py  frame_translate_external_files.py
df_translation_client/utils/: config.py  po_languages.py  tkinter_helpers.py
df_translation_client/widgets/: __init__.py  bisect_tool.py  custom_widgets.py  file_entry.py  scrollbar_frame.py  two_state_button.py
frames/: dialog_do_not_fix_spaces.py  dialog_dont_fix_spaces.py  frame_debug.py  frame_download.py  frame_patch.py  frame_translate_external_files.py
locale/ru/LC_MESSAGES/: df-translate.po
tests/: test_app.py  test_bisect.py  test_config.py  test_confiig.py  test_dialog_do_not_fix_spaces.py  test_tkinter_helpers.py
widgets/: __init__.py  bisect_tool.py  custom_scrollable_text.py  custom_widgets.py  file_entry.py  scrollable_listbox.py  scrollbar_frame.py  two_state_button.py
