[tool.poetry]
name = "df-translation-client"
version = "0.1.0"
description = "A GUI client intended to simplify usage of dfrus and other utilities"
authors = ["insolor <insolor@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
bidict = "^0.22.0"
natsort = "8.2.0"
requests = "^2.26.0"
python-transifex = { url = "https://github.com/insolor/python-transifex/archive/master.zip" }
dfrus = { url = "https://github.com/dfint/dfrus/releases/download/0.0.10/dfrus-0.0.10-py3-none-any.whl" }
df-gettext-toolkit = { url = "https://github.com/dfint/df-gettext-toolkit/releases/download/0.3.3/df_gettext_toolkit-0.3.3-py3-none-any.whl" }
async-tkinter-loop = "^0.6.0"
tk_grid_helper = { url = "https://github.com/insolor/tk_grid_helper/releases/download/0.1.2/tk_grid_helper-0.1.2-py3-none-any.whl"}
httpx = "^0.23.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
pytest-mock = "^3.6.1"
pytest-timeout = "^2.0.1"
flake8 = "^5.0.4"
# tkinter-stubs = { url = "https://github.com/insolor/tkinter-stubs/releases/download/0.1.0/tkinter_stubs-0.1.0-py3-none-any.whl" }
hypothesis = "^6.56.0"
flake8-tkinter = "^0.5.4"

[tool.poetry.scripts]
df-translate = "df_translation_client.app:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
