[tool.poetry]
name = "df-translation-client"
version = "0.1.0"
description = "A GUI client intended to simplify usage of dfrus and other utilities"
authors = ["insolor <insolor@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8.1"
bidict = "^0.22.1"
natsort = "8.3.1"
dfrus = { url = "https://github.com/dfint/dfrus/releases/download/0.0.11/dfrus-0.0.11-py3-none-any.whl" }
df-gettext-toolkit = { url = "https://github.com/dfint/df-gettext-toolkit/releases/download/0.3.3/df_gettext_toolkit-0.3.3-py3-none-any.whl" }
async-tkinter-loop = "^0.7.0"
tk_grid_helper = { url = "https://github.com/insolor/tk_grid_helper/releases/download/0.1.2/tk_grid_helper-0.1.2-py3-none-any.whl"}
httpx = "^0.24.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
pytest-timeout = "^2.0.1"
flake8 = "^6.0.0"
# tkinter-stubs = { url = "https://github.com/insolor/tkinter-stubs/releases/download/0.1.0/tkinter_stubs-0.1.0-py3-none-any.whl" }
hypothesis = "^6.70.1"
flake8-tkinter = "^0.5.4"
black = "^23.3.0"
isort = "^5.12.0"

[tool.poetry.scripts]
df-translate = "df_translation_client.app:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"